--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 *.class
+.project
+.gradle
+.classpath
+.checkstyle
+.settings
+build/
+bin/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +17,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Windows git artifact
+fileeditor
+
+# Mac specific files
+.DS_Store
