--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,3 @@
-apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'jacoco-full-report'
-
-apply plugin: SemanticVersionPlugin
-apply plugin: EclipseCheckstylePlugin
-apply plugin: JavaVersionPlugin
-
 buildscript {
     repositories {
         jcenter()
@@ -20,6 +8,28 @@ buildscript {
         classpath 'com.palantir:jacoco-coverage:0.1.3'
     }
 }
+
+plugins {
+    id 'com.jfrog.bintray' version '1.2'
+    id 'com.gradle.plugin-publish' version '0.9.1'
+}
+
+apply plugin: 'com.github.kt3k.coveralls'
+apply plugin: 'checkstyle'
+apply plugin: 'findbugs'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'jacoco-full-report'
+apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+
+apply plugin: EclipseCheckstylePlugin
+apply plugin: JavaVersionPlugin
+apply plugin: SemanticVersionPlugin
+
+group 'com.palantir.ri'
+version semverVersion()
 
 javaVersion {
     version '1.7'
@@ -33,6 +43,22 @@ jacoco {
 repositories {
     jcenter()
     mavenCentral()
+}
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier 'sources'
+}
+
+publishing {
+    publications {
+        bintray(MavenPublication) {
+            from components.java
+            artifact(sourceJar) {
+                classifier 'sources'
+            }
+        }
+    }
 }
 
 // sourceDirectories are not available on jacocoFullReport until after evaluation
@@ -73,7 +99,6 @@ eclipseClasspath.doLast {
     eclipse.classpath.sourceSets.test.output.each { it.mkdirs() }
 }
 
-
 tasks.coveralls {
     onlyIf { getProject().hasProperty("isCI") }
     dependsOn tasks.jacocoFullReport
@@ -83,4 +108,24 @@ dependencies {
     testCompile "junit:junit:$junitVersion"
     testCompile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
 }
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    pkg {
+        repo = 'releases-internal'
+        name = 'resource-identifier'
+        userOrg = 'palantir'
+        licenses = ['Apache-2.0']
+        publications = ['bintray']
+    }
+}
+
+bintrayUpload.onlyIf {
+    project.version ==~ /\d+\.\d+\.\d+/
+}
+
+bintrayUpload.dependsOn { generatePomFileForBintrayPublication }
+bintrayUpload.dependsOn { sourceJar }
+bintrayUpload.dependsOn { build }
 
