fixes #9 - add javadoc and javadoc building

--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,8 @@ tasks.coveralls {
     dependsOn tasks.jacocoFullReport
 }
 
+tasks.check.dependsOn(javadoc)
+
 dependencies {
     testCompile "junit:junit:$junitVersion"
     testCompile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
