--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,30 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-        classpath 'com.palantir:jacoco-coverage:0.1.3'
-    }
-}
-
 plugins {
     id 'com.jfrog.bintray' version '1.2'
+    id 'com.github.kt3k.coveralls' version '2.4.0'
     id 'com.gradle.plugin-publish' version '0.9.1'
-}
+    id 'com.palantir.git-version' version '0.1.3'
 
-apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'checkstyle'
-apply plugin: 'findbugs'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'jacoco-full-report'
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
+    id 'checkstyle'
+    id 'eclipse'
+    id 'findbugs'
+    id 'jacoco'
+    id 'java'
+    id 'idea'
+    id 'maven-publish'
+}
 
 apply plugin: EclipseCheckstylePlugin
 apply plugin: JavaVersionPlugin
-apply plugin: SemanticVersionPlugin
 
 group 'com.palantir.ri'
-version semverVersion()
+version gitVersion()
 
 javaVersion {
     version '1.7'
 }
 
-jacoco {
-    toolVersion = jacocoVersion
-}
-
-// Required to resolve jacocoAnt
 repositories {
     jcenter()
-    mavenCentral()
 }
 
 task sourceJar(type: Jar) {
@@ -58,14 +40,6 @@ publishing {
                 classifier 'sources'
             }
         }
-    }
-}
-
-// sourceDirectories are not available on jacocoFullReport until after evaluation
-afterEvaluate {
-    coveralls {
-        sourceDirs = tasks.jacocoFullReport.sourceDirectories.flatten()
-        jacocoReportPath = "${buildDir}/reports/jacoco/jacocoFullReport/jacocoFullReport.xml"
     }
 }
 
@@ -99,9 +73,19 @@ eclipseClasspath.doLast {
     eclipse.classpath.sourceSets.test.output.each { it.mkdirs() }
 }
 
+jacoco {
+    toolVersion = jacocoVersion
+}
+
+jacocoTestReport.reports.xml.enabled true
+
+coveralls {
+    jacocoReportPath = "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+}
+
 tasks.coveralls {
     onlyIf { getProject().hasProperty("isCI") }
-    dependsOn tasks.jacocoFullReport
+    dependsOn tasks.jacocoTestReport
 }
 
 tasks.check.dependsOn(javadoc)
