--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,10 @@ repositories {
 }
 
 dependencies {
-    compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
 
     testCompile "junit:junit:$junitVersion"
+    testCompile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
 }
 
 task sourceJar(type: Jar) {
