--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 # tools dependencies
+baselineVersion=0.2.6
+bintrayPluginVersion=1.4
 checkstyleVersion=6.1.1
 findbugsVersion=3.0.0
 jacocoVersion=0.7.1.201405082137
