--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 
 allprojects {
     version gitVersion()
-    group 'com.palantir.palantir.ri'
+    group 'com.palantir.ri'
 }
 
 subprojects {
