--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.netflix.nebula:gradle-dependency-lock-plugin:7.0.1'
         classpath 'com.netflix.nebula:nebula-publishing-plugin:14.1.1'
-        classpath 'com.palantir.baseline:gradle-baseline-java:2.41.0'
+        classpath 'com.palantir.baseline:gradle-baseline-java:3.79.0'
         classpath 'com.palantir.gradle.consistentversions:gradle-consistent-versions:1.14.0'
         classpath 'com.palantir.gradle.gitversion:gradle-git-version:0.12.2'
     }
@@ -32,8 +32,8 @@ repositories {
 sourceCompatibility = 1.7
 
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-annotations'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations'
 
-    testCompile 'junit:junit'
-    testCompile 'com.fasterxml.jackson.core:jackson-databind'
+    testImplementation 'junit:junit'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
 }
