ResourceIdentifier factories require safe inputs for non-locator elements
The service, instance, and type fields must be safe. Note that
this PR does _not_ add `@Safe` annotations on the getters yet in
order to validate safe inputs are provided.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
 
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations'
+    implementation 'com.palantir.safe-logging:safe-logging'
 
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
     testImplementation 'net.jqwik:jqwik'
