--- a/versions.props
+++ b/versions.props
@@ -1,5 +1,6 @@
 com.fasterxml.jackson.core:* = 2.16.1
 com.fasterxml.jackson.core:jackson-databind = 2.16.1
+com.google.errorprone:error_prone_* = 2.26.1
 com.palantir.safe-logging:* = 3.7.0
 net.jqwik:* = 1.8.4
 org.junit.jupiter:* = 5.10.2
