--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             if [ -x .circleci/check-setup.sh ]; then
                 echo "Running check-setup" && .circleci/check-setup.sh && echo "check-setup complete"
             fi
-      - run: ./gradlew --parallel --stacktrace --continue --max-workers=2 build
+      - run: ./gradlew --parallel --stacktrace --continue --max-workers=2 build javaToolchains
       - *check-no-files-changed
       - persist_to_workspace:
           root: /home/circleci
@@ -91,7 +91,7 @@ jobs:
       - restore_cache: { key: 'gradle-wrapper-v1-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
       - restore_cache: { key: 'publish-gradle-cache-v1-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
       - deploy:
-          command: ./gradlew --parallel --stacktrace --continue publish
+          command: ./gradlew --parallel --stacktrace --continue publish javaToolchains
       - run:
           command: git status --porcelain
           when: always
