--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             if [ -x .circleci/check-setup.sh ]; then
                 echo "Running check-setup" && .circleci/check-setup.sh && echo "check-setup complete"
             fi
-      - run: ./gradlew --parallel --stacktrace --continue --max-workers=2 build javaToolchains
+      - run: ./gradlew --parallel --stacktrace --continue --max-workers=2 check 
       - *check-no-files-changed
       - persist_to_workspace:
           root: /home/circleci
@@ -74,6 +74,41 @@ jobs:
           paths: [ ~/.gradle/caches ]
       - run:
           command: mkdir -p ~/junit && find . -type f -regex ".*/build/.*TEST.*xml" -exec cp --parents {} ~/junit/ \;
+          when: always
+      - store_test_results: { path: ~/junit }
+      - store_artifacts: { path: ~/artifacts }
+
+  build:
+    machine:
+      docker_layer_caching: true
+    environment:
+      CIRCLE_TEST_REPORTS: /home/circleci/junit
+      CIRCLE_ARTIFACTS: /home/circleci/artifacts
+      _JAVA_OPTIONS: -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false -Xmx8192m
+      JAVA_HOME: /opt/java11
+    steps:
+      - checkout
+      - restore_cache: { key: 'gradle-wrapper-v1-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
+      - restore_cache: { key: 'build-gradle-cache-v1-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
+      - run:
+          name: Install Java 11
+          command: |
+            sudo mkdir -p /opt/java && cd /opt/java && sudo chown -R circleci:circleci .
+            curl https://corretto.aws/downloads/resources/11.0.24.8.1/amazon-corretto-11.0.24.8.1-linux-x64.tar.gz | tar -xzf - -C /opt/java
+            sudo ln -s /opt/java/*/ /opt/java11
+      - run:
+          name: build-setup
+          command: |
+            if [ -x .circleci/build-setup.sh ]; then
+                echo "Running build-setup" && .circleci/build-setup.sh && echo "build-setup complete"
+            fi
+      - run: ./gradlew --parallel --stacktrace javaToolchains
+      - *check-no-files-changed
+      - save_cache:
+          key: 'build-gradle-cache-v1-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}'
+          paths: [ ~/.gradle/caches ]
+      - run:
+          command: mkdir -p ~/junit && find . -type f -regex ".*/build/.*TEST.*xml" -exec cp --parents {} ~/junit/ \; || true
           when: always
       - store_test_results: { path: ~/junit }
       - store_artifacts: { path: ~/artifacts }
@@ -91,7 +126,7 @@ jobs:
       - restore_cache: { key: 'gradle-wrapper-v1-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
       - restore_cache: { key: 'publish-gradle-cache-v1-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
       - deploy:
-          command: ./gradlew --parallel --stacktrace --continue publish javaToolchains
+          command: ./gradlew --parallel --stacktrace --continue publish
       - run:
           command: git status --porcelain
           when: always
@@ -114,8 +149,11 @@ workflows:
       - check:
           filters: { tags: { only: /.*/ } }
 
+      - build:
+          filters: { tags: { only: /.*/ } }
+
       - circle-all:
-          requires: [ check ]
+          requires: [ check, build ]
           filters: { tags: { only: /.*/ } }
 
       - publish:
